axe animation tilemap

--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -1,6 +1,7 @@
 [editor_metadata]
 
-executable_path="C:/Users/Absen/Desktop/Godot_v4.2.1-stable_win64.exe"
+executable_path="/home/ttmz/godot/Godot_Engine"
+tile_source_sort=0
 
 [debug_options]
 
@@ -26,6 +27,7 @@ ProgressBar:scale=true
 Area2D:scale=true
 CollisionShape2D:scale=true
 CharacterBody2D:scale=true
+TileMap:scale=true
 
 [dialog_bounds]
 
