--- a/PROTO_02/.godot/editor/script_editor_cache.cfg
+++ b/PROTO_02/.godot/editor/script_editor_cache.cfg
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 29,
-"scroll_position": 0.0,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,15 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 68.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 86,
-"selection_to_column": 35,
-"selection_to_line": 86,
+"row": 76,
+"scroll_position": 61.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
