--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://player.tscn", "res://treePopup.tscn")
-current_scene="res://treePopup.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://treePopup.tscn", "res://player.tscn")
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://campfire.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://windsfx.gd"]
+open_scripts=["res://campfire.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://treePopup.gd", "res://windsfx.gd"]
 selected_script="res://tree.gd"
 open_help=[]
 script_split_offset=70
