--- a/PROTO_02/.godot/editor/script_editor_cache.cfg
+++ b/PROTO_02/.godot/editor/script_editor_cache.cfg
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 0.0,
+"row": 43,
+"scroll_position": 29.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,15 +59,25 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 86,
-"scroll_position": 68.0,
-"selection": true,
-"selection_from_column": 22,
-"selection_from_line": 86,
-"selection_to_column": 35,
-"selection_to_line": 86,
+"row": 74,
+"scroll_position": 69.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://treePopup.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
