--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,28 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/sfx/", "res://assets/popups/", "res://assets/player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-
-open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://treePopup.tscn", "res://player.tscn")
-
+open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://player.tscn", "res://treePopup.tscn", "res://campfire_new.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://campfire.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://treePopup.gd", "res://windsfx.gd"]
-selected_script="res://tree.gd"
-
+open_scripts=["res://campfire.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://windsfx.gd"]
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
