--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -1,7 +1,8 @@
 [editor_metadata]
 
-executable_path="C:/Users/Absen/Desktop/Godot_v4.2.1-stable_win64.exe"
+executable_path="/home/ttmz/godot/Godot_Engine"
 use_advanced_connections=false
+tile_source_sort=0
 
 [debug_options]
 
@@ -29,6 +30,7 @@ CollisionShape2D:scale=true
 CharacterBody2D:scale=true
 TextureProgressBar:scale=true
 AnimationTrackKeyEdit:value=false
+TileMap:scale=true
 
 [dialog_bounds]
 
