--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://player.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sfx/tree-fall.ogg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/sfx/", "res://assets/popups/", "res://assets/player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,12 +32,12 @@ current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://campfire.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://windsfx.gd"]
-selected_script="res://player.gd"
+selected_script="res://campfire.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
