--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/Absen/Desktop/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Users/dylan/Documents/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -36,7 +36,7 @@ create_new_node=Rect2(485, 198, 900, 700)
 
 [color_picker]
 
-recent_presets=PackedColorArray(1, 0.263687, 0.616217, 1, 1, 0.262745, 0.164706, 1, 1, 0.509804, 0.164706, 1, 1, 0.509804, 0, 1, 1, 0.454902, 0, 1, 0.8, 0.8, 0.8, 0, 1, 0.0313726, 1, 1, 0.137822, 0.746035, 0.302791, 1, 1, 0, 0, 1)
+recent_presets=PackedColorArray(1, 0.262745, 0.164706, 1, 1, 0.509804, 0.164706, 1, 1, 0.509804, 0, 1, 1, 0.454902, 0, 1, 0.8, 0.8, 0.8, 0, 1, 0.0313726, 1, 1, 0.137822, 0.746035, 0.302791, 1, 1, 0, 0, 1, 0, 0, 0, 1)
 
 [script_setup]
 
