--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -1,8 +1,6 @@
 [editor_metadata]
 
-
-executable_path="C:/Users/dylan/Documents/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
-
+executable_path="C:/Users/dylan/OneDrive/Documents/Godot_v4.2.1-stable_win64.exe/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 tile_source_sort=0
 
