--- a/PROTO_02/.godot/editor/script_editor_cache.cfg
+++ b/PROTO_02/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 27,
 "scroll_position": 14.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 21,
-"selection_to_column": 21,
-"selection_to_line": 23,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,11 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 52,
-"scroll_position": 33.0,
+"row": 22,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -53,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 36,
-"scroll_position": 24.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 66.0,
+"row": 14,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
