--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://player.tscn", "res://treePopup.tscn", "res://campfire_new.tscn")
-current_scene="res://campfire.tscn"
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
