--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://log.tscn", "res://player.tscn", "res://campfire_new.tscn")
-current_scene="res://main.tscn"
+current_scene="res://log.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://campfire.gd", "res://create_tree.gd", "res://log.gd", "res://player.gd", "res://tree.gd"]
-selected_script="res://create_tree.gd"
+selected_script="res://log.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
