--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://log.tscn", "res://player.tscn", "res://campfire_new.tscn")
-current_scene="res://log.tscn"
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://campfire.gd", "res://create_tree.gd", "res://log.gd", "res://player.gd", "res://tree.gd"]
-selected_script="res://log.gd"
+selected_script="res://create_tree.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
