--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -22,3 +22,7 @@ Sprite2D:scale=true
 [color_picker]
 
 recent_presets=PackedColorArray(0.124165, 0.133857, 0.121724, 1, 0.0891024, 0.146145, 0.106956, 1, 0.12549, 0.133333, 0.121569, 1, 0.0901961, 0.145098, 0.105882, 1)
+
+[dialog_bounds]
+
+project_settings=Rect2(510, 190, 900, 700)
