added new log pop up

--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sfx/tree-fall.ogg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/sfx/", "res://assets/popups/", "res://assets/player/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/fire/fire0.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://assets/", "res://assets/sfx/", "res://assets/fire/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://player.tscn", "res://treePopup.tscn", "res://campfire_new.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://campfire.tscn", "res://tree.tscn", "res://treePopup.tscn", "res://campfire_new.tscn", "res://player.tscn", "res://log.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://campfire.gd", "res://create_tree.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://windsfx.gd"]
+open_scripts=["res://campfire.gd", "res://create_tree.gd", "res://log.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://treePopup.gd", "res://windsfx.gd"]
 selected_script="res://create_tree.gd"
 open_help=[]
 script_split_offset=70
