--- a/PROTO_02/.godot/editor/script_editor_cache.cfg
+++ b/PROTO_02/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 52,
-"scroll_position": 0.0,
+"scroll_position": 20.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,8 +48,8 @@ state={
 "column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 3.0,
+"row": 39,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 44,
-"scroll_position": 18.0,
+"row": 119,
+"scroll_position": 105.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,6 +77,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://treePopup.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://log.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
