--- a/PROTO_02/.godot/editor/editor_layout.cfg
+++ b/PROTO_02/.godot/editor/editor_layout.cfg
@@ -28,15 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://main_menu.tscn", "res://tree.tscn", "res://player.tscn", "res://treePopup.tscn", "res://campfire_new.tscn")
-current_scene="res://main.tscn"
+current_scene="res://player.tscn"
 center_split_offset=-270
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://campfire.gd", "res://create_tree.gd", "res://main_menu.gd", "res://player.gd", "res://tree.gd", "res://treePopup.gd", "res://windsfx.gd"]
-selected_script="res://create_tree.gd"
+selected_script="res://player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
