--- a/PROTO_02/.godot/editor/project_metadata.cfg
+++ b/PROTO_02/.godot/editor/project_metadata.cfg
@@ -32,6 +32,10 @@ TextureProgressBar:scale=true
 AnimationTrackKeyEdit:value=false
 TileMap:scale=true
 StaticBody2D:scale=true
+GridContainer:scale=true
+Label:scale=true
+ColorRect:scale=true
+Button:scale=true
 
 [dialog_bounds]
 
